syntax = "proto3";

package go_devops_advanced_diploma;

option go_package = "github.com/Jay-T/go-devops-advanced-diploma/internal/pb";
import "google/protobuf/timestamp.proto";
import "common_messages.proto";

message SecretMessage {
    string key = 1;
    string value = 2;
    string masterkey = 3;
    repeated Metadata metadata = 4;
    optional google.protobuf.Timestamp created_at = 5;
}

message CreateSecretRequest {
    SecretMessage data = 1;
}

message CreateSecretResponse {
    SecretMessage data = 1;
    
}

message UpdateSecretRequest {
    SecretMessage data = 1;
}

message UpdateSecretResponse {
    SecretMessage data = 1;
}

message DeleteSecretRequest {
    string key = 1;
}

message DeleteSecretResponse {
    string key = 1;
}

message GetSecretRequest {
    string key = 1;
    string masterkey = 2;
}

message GetSecretResponse {
    SecretMessage data = 1;
}

message ListSecretRequest {
    string masterkey = 1;
}

message ListSecretResponse {
    repeated SecretMessage data = 1;
}